--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,31 @@
 {
     "require": {
         "php": "^7.1",
+        "dibi/dibi": "^4.0",
+        "keboola/csv": "^2.0",
         "keboola/php-component": "^4.1"
     },
     "require-dev": {
+        "dg/bypass-finals": "^1.1",
         "jakub-onderka/php-parallel-lint": "^1.0",
-        "keboola/coding-standard": "^4.0",
+        "keboola/coding-standard": "^5.0",
+        "keboola/datadir-tests": "^2.1",
         "keboola/php-temp": "^1.0",
-        "phpstan/phpstan-shim": "^0.9.2",
+        "mockery/mockery": "^1.1",
+        "phpstan/phpstan-mockery": "^0.10",
+        "phpstan/phpstan-shim": "^0.10",
         "phpunit/phpunit": "^7.0",
-        "symfony/process": "^4.0",
-        "keboola/datadir-tests": "^2.0"
+        "symfony/process": "^4.0"
     },
     "autoload": {
         "psr-4": {
-            "MyComponent\\": "src/"
+            "Keboola\\ExTeradata\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "MyComponent\\Tests\\": "tests/phpunit/",
-            "MyComponent\\FunctionalTests\\": "tests/functional/"
+            "Keboola\\ExTeradata\\Tests\\Unit\\": "tests/phpunit/",
+            "Keboola\\ExTeradata\\Tests\\Functional\\": "tests/functional/"
         }
     },
     "scripts": {
