Init Code Climate

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ services:
   - docker
 
 before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+  - export GIT_COMMIT_SHA=$TRAVIS_COMMIT
+  - export GIT_BRANCH=$TRAVIS_BRANCH
+
   - export APP_IMAGE=keboola-component
   - docker -v
   - docker build -t $APP_IMAGE .
@@ -24,6 +30,12 @@ script:
   # run test job inside KBC
   # - docker run --rm -e KBC_STORAGE_TOKEN quay.io/keboola/syrup-cli:latest run-job $KBC_DEVELOPERPORTAL_APP $KBC_APP_TEST_CONFIG_ID test
   - skip
+
+after_script:
+  - pwd
+  - ls -la $(pwd)
+  - ls -la $(pwd)/build/logs
+  - ./cc-test-reporter after-build -t clover --exit-code $TRAVIS_TEST_RESULT --debug
 
 deploy:
   provider: script
