--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
 version: '2'
 services:
-  dev:
+  app:
     build: .
+    image: keboola/ex_teradata
     volumes:
       - ./:/code
       - ./data:/data
+  tests:
+    build:
+      context: .
+      dockerfile: Dockerfile-tests
+    command: ./code-coverage.sh
