--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,18 @@ services:
     volumes:
       - ./:/code
       - ./data:/data
+    environment:
+      - TERADATA_HOST
+      - TERADATA_USERNAME
+      - TERADATA_PASSWORD
+      - TERADATA_DATABASE
   tests:
     build:
       context: .
       dockerfile: Dockerfile-tests
     command: ./code-coverage.sh
+    environment:
+      - TERADATA_HOST
+      - TERADATA_USERNAME
+      - TERADATA_PASSWORD
+      - TERADATA_DATABASE
