--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,14 @@ services:
   - docker
 
 before_script:
-  - export APP_IMAGE=keboola-component
+  - export APP_IMAGE=keboola/ex-teradata
+  - export APP_IMAGE_TEST=keboola/ex-teradata-test
   - docker -v
-  - docker build -t $APP_IMAGE .
-  - docker run $APP_IMAGE composer ci
+  - docker build -t $APP_IMAGE --build-arg AWS_SECRET_ACCESS_KEY --build-arg AWS_ACCESS_KEY_ID .
+  - docker build -t $APP_IMAGE_TEST -f Dockerfile-tests --build-arg AWS_SECRET_ACCESS_KEY --build-arg AWS_ACCESS_KEY_ID .
+
+  - docker run -e TERADATA_HOST -e TERADATA_USERNAME -e TERADATA_PASSWORD -e TERADATA_DATABASE $APP_IMAGE composer ci
+  - docker run -e TERADATA_HOST -e TERADATA_USERNAME -e TERADATA_PASSWORD -e TERADATA_DATABASE -e CC_TEST_REPORTER_ID -e GIT_COMMIT_SHA=$TRAVIS_COMMIT -e GIT_BRANCH=$TRAVIS_BRANCH $APP_IMAGE_TEST /code/code-coverage.sh
 
   # push test image to ECR
   - docker pull quay.io/keboola/developer-portal-cli-v2:latest
