Support port defining

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ before_script:
   - docker build -t $APP_IMAGE --build-arg AWS_SECRET_ACCESS_KEY --build-arg AWS_ACCESS_KEY_ID .
   - docker build -t $APP_IMAGE_TEST -f Dockerfile-tests --build-arg AWS_SECRET_ACCESS_KEY --build-arg AWS_ACCESS_KEY_ID .
 
-  - docker run -e TERADATA_HOST -e TERADATA_USERNAME -e TERADATA_PASSWORD -e TERADATA_DATABASE $APP_IMAGE composer ci
-  - docker run -e TERADATA_HOST -e TERADATA_USERNAME -e TERADATA_PASSWORD -e TERADATA_DATABASE -e CC_TEST_REPORTER_ID -e GIT_COMMIT_SHA=$TRAVIS_COMMIT -e GIT_BRANCH=$TRAVIS_BRANCH $APP_IMAGE_TEST /code/code-coverage.sh
+  - docker run -e TERADATA_HOST -e TERADATA_PORT -e TERADATA_USERNAME -e TERADATA_PASSWORD -e TERADATA_DATABASE $APP_IMAGE composer ci
+  - docker run -e TERADATA_HOST -e TERADATA_PORT -e TERADATA_USERNAME -e TERADATA_PASSWORD -e TERADATA_DATABASE -e CC_TEST_REPORTER_ID -e GIT_COMMIT_SHA=$TRAVIS_COMMIT -e GIT_BRANCH=$TRAVIS_BRANCH $APP_IMAGE_TEST /code/code-coverage.sh
 
   # push test image to ECR
   - docker pull quay.io/keboola/developer-portal-cli-v2:latest
