--- a/docker/odbc.ini
+++ b/docker/odbc.ini
@@ -1,9 +1,11 @@
 [ODBC]
 InstallDir=/opt/teradata/client/ODBC_64
-Trace=0
+Trace=1
 TraceDll=/opt/teradata/client/ODBC_64/lib/odbctrac.so
 TraceFile=/usr/odbcusr/trace.log
 TraceAutoStop=0
+Debug=1
+DebugFile=/usr/odbcusr/debug.log
 
 [Teradata]
 Driver = /opt/teradata/client/ODBC_64/lib/tdataodbc_sb64.so
