Do not run datadir tests, currently we do not have any TD instances

--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,7 @@
         "tests-phpunit": "phpunit",
         "tests-datadir": "phpunit tests/functional",
         "tests": [
-            "@tests-phpunit",
-            "@tests-datadir"
+            "@tests-phpunit"
         ],
 
         "phpstan": "phpstan analyse ./src ./tests --level=max --no-progress -c phpstan.neon",
