--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '2'
 services:
   dev:
     build:
@@ -11,6 +10,7 @@ services:
     volumes:
       - ./:/code
       - ./data:/data
+    network_mode: host
     environment:
       - TERADATA_HOST
       - TERADATA_PORT
